created the api for for delete data from joined user

--- a/vercel.json
+++ b/vercel.json
@@ -21,6 +21,10 @@
         {
             "src": "/api/joinedUserList",
             "dest": "/index.js"
+        },
+        {
+            "src": "/api/deleteJoinedUserByRoom/(.*)",
+            "dest": "/index.js"
         }
        
     ]
