added get api for joined user by interest

--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,10 @@
             "dest": "/index.js"
         },
         {
+            "src": "/api/joinedUserList/(.*)",
+            "dest": "/index.js"
+        },
+        {
             "src": "/api/deleteJoinedUserByRoom/(.*)",
             "dest": "/index.js"
         }
